--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  qrscan: ^0.2.17
+  shared_preferences:
   http: ^0.12.1
   flutter_test:
     sdk: flutter
